# Aufhebung

./: README.md
01 Hello World/: hello_world_deluxe_edition.cpp
02 Object, Types and Values/: CMakeLists.txt  input_and_type.cpp  input_and_type_oop.cpp
03 Computation/: CMakeLists.txt  drill.cpp
04 Erros/: CMakeLists.txt
05 Writing a Program/Calculator/: CMakeLists.txt  calculator00.cpp  calculator01.cpp
07 Technicalities Functions and etc/Drill/: CMakeLists.txt  Drill_07.cpp
07 Technicalities Functions and etc/Exercises/: CMakeLists.txt  exercise_09.cpp  exercise_12.cpp
07 Technicalities Functions and etc/Test/: test.cpp
08 Technicalities Classes and etc/Drill/: CMakeLists.txt  date.cpp  date.h  month.cpp
08 Technicalities Classes and etc/Exercises/: CMakeLists.txt  exercise_02.cpp  exercise_03.cpp  exercise_05.cpp  test.cpp
08 Technicalities Classes and etc/Exercises/exercise_09/: CMakeLists.txt
08 Technicalities Classes and etc/Exercises/exercise_09/headers/: book.h  date.h  library.h  patron.h
08 Technicalities Classes and etc/Exercises/exercise_09/src/: book.cpp  date.cpp  library.cpp  patron.cpp
08 Technicalities Classes and etc/Exercises/library_v1/headers/: book_v1.h  date.h
08 Technicalities Classes and etc/Exercises/library_v1/src/: book_v1.cpp  date.cpp
08 Technicalities Classes and etc/Tests/: CMakeLists.txt
08 Technicalities Classes and etc/Try This/: CMakeLists.txt  month_operator_overloading.cpp
10 A Display Model/Examples/: CMakeLists.txt  example_10.3.cpp
C++ Primer/Test/: CMakeLists.txt  (+1 more)
PPP3/: CMakeLists.txt
(+27 files in other folders)
