cmake_minimum_required(VERSION 3.30)

set(CMAKE_CXX_STANDARD 23)

project(exercise_02)
add_executable(exercise_02 exercise_02.cpp)

project(exercise_07)
add_executable(exersice_07 exercise_07.cpp)

project(exercise_09)
add_executable(exercise_09 exercise_09.cpp)

project(exercise_12)
add_executable(exercise_12 exercise_12.cpp)

project(exercise_13)
add_executable(exercise_13 exercise_13.cpp)

